# oneFinger

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  readme.txt  requirements.txt  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BacktestForm.tsx  ResultsPanel.tsx
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  engine.py
src/data/: __init__.py  akshare_provider.py
src/models/: __init__.py  account.py  ohlcv.py  order.py  result.py
src/strategy/: __init__.py  base.py  ma_cross.py  rsi.py
tests/: __init__.py
tests/api/: __init__.py
tests/core/: __init__.py  test_engine.py
tests/data/: __init__.py  test_akshare_provider.py
tests/models/: __init__.py  test_account.py  test_ohlcv.py  test_order.py  test_result.py
tests/strategy/: __init__.py  test_ma_cross.py  test_rsi.py
